# taskhub

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: pylint.yml
app/: main.py
app/apis/v1/: auth.py  organizations.py  teams.py  users.py
app/core/: config.py  dependencies.py  logging_conf.py  permission_config.py  security.py
app/db/: base.py  init_db.py
app/db/crud/: crud_organization.py  crud_permission.py  crud_team.py  crud_user.py  curd_role.py
app/db/models/: __init__.py  organization.py  permission.py  role.py  team.py  user.py
app/exceptions/: http_exceptions.py
app/schemas/: organization.py  role.py  team.py  token.py  user.py
app/services/: auth_service.py  organization_service.py  team_service.py  user_service.py
app/utils/: helpers.py
